# improve-your-python

./: Dockerfile  README.md  basicscript.py  docker-compose.yml  dynamodb.Dockerfile  mysql.Dockerfile  prep_win_env.ps1  pyproject.toml  requirements.txt
plugins/dynamodb/: pyproject.toml
plugins/dynamodb/todo_list_api_dynamo/: db.py
plugins/mysql/: pyproject.toml
plugins/mysql/todo_list_api_mysql/: db.py
scripts/: insert_data.py
test/: test_api.py  test_controller.py
test/model/: test_item.py  test_list.py
todo_list_api/: api.py  controller.py
todo_list_api/app/: controller.py  exceptions.py  plugin.py
todo_list_api/db/: interface.py  memory.py
todo_list_api/model/: item.py  list.py
