[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Tone Vanden Bergh <vdbtone@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.1.2"
invoke = "^1.4.1"
boto3 = "^1.16.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
