[tool.poetry]
name = "todo_list_api"
version = "1.2.3"
description = "An API for managing TO DO items"
authors = ["Tone Vanden Bergh <vdbtone@gmail.com>", "Aron Geerts <aron.geerts@ordina.be>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "1.1.2"

[tool.poetry.dev-dependencies]
black = "20.8b1"
coverage = "^5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.masonry.api"
