[tool.poetry]
name = "todo_list_api_mysql"
version = "0.1.0"
description = ""
authors = ["Aron Geerts <arongeerts8@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mysql-connector-python = "8.0.26"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
